--- a/app/src/main/res/layout/activity_homepage4nurse.xml
+++ b/app/src/main/res/layout/activity_homepage4nurse.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <Button
-        android:id="@+id/tasksButton_nurse"
+        android:id="@+id/patientsButton_nurse"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="56dp"
@@ -52,18 +52,18 @@
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <TextView
-        android:id="@+id/tasksTxt_nurse"
+        android:id="@+id/patientsTxt_nurse"
         android:layout_width="88dp"
         android:layout_height="28dp"
         android:layout_marginTop="168dp"
         android:elevation="4dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="@string/tasks_label"
+        android:text="@string/my_patients"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="@+id/tasksButton_nurse"
-        app:layout_constraintStart_toStartOf="@+id/tasksButton_nurse"
+        app:layout_constraintEnd_toEndOf="@+id/patientsButton_nurse"
+        app:layout_constraintStart_toStartOf="@+id/patientsButton_nurse"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <View
@@ -72,7 +72,7 @@
         android:layout_height="44dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="116dp"
-        android:background="@drawable/menu_button"
+        android:background="@drawable/ic_assignment_indicator"
         android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
