Added password encryption and removed 2FA PinCodeActivity

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -49,7 +49,15 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
+    <Spinner
+        android:id="@+id/sortSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp" />
+
+
     <!-- Button to Navigate to Tasks List -->
+
     <Button
         android:id="@+id/buttonViewTasks"
         android:text="View All Tasks"
