Patient List Updated

--- a/app/src/main/res/layout/activity_add_new_patient_nurse.xml
+++ b/app/src/main/res/layout/activity_add_new_patient_nurse.xml
@@ -14,14 +14,15 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/purple_700"
+        android:background="@color/teal_700"
         app:navigationIcon="@drawable/ic_arrow_back"
         app:title="@string/add_new_patient"
-        app:subtitle="Caretaker"
+        app:subtitle="Nurse"
         app:subtitleCentered="true"
-        app:subtitleTextColor="@color/white"
         app:titleCentered="true"
         app:titleTextColor="@android:color/white"
+        app:subtitleTextColor="@android:color/white"
+        app:subtitleTextAppearance="@font/poppins_bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -122,12 +123,12 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnSelectFromGallery"
                     app:icon="@drawable/photo_select"
-                    app:iconTint="@color/purple_700"
+                    app:iconTint="@color/teal_600"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="60dp"
                     app:iconGravity="textStart"
-                    android:textColor="@color/purple_500"
+                    android:textColor="@color/teal_600"
                     app:iconSize="30dp"
                     android:text="@string/select_from_gallery"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -137,14 +138,14 @@
                 <!-- Take Photo Button -->
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnTakePhoto"
-                    app:iconTint="@color/purple_700"
+                    app:iconTint="@color/teal_600"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="60dp"
                     app:icon="@drawable/baseline_add_a_photo_24"
                     app:iconGravity="textStart"
                     app:iconSize="26dp"
-                    android:textColor="@color/purple_500"
+                    android:textColor="@color/teal_600"
                     android:text="@string/take_photo"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_marginStart="8dp"/>
@@ -189,7 +190,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/add_patient"
                 android:textColor="@android:color/white"
-                android:backgroundTint="@color/purple_500"
+                android:backgroundTint="@color/teal_600"
                 app:cornerRadius="8dp"
                 android:layout_marginBottom="24dp" />
 
