--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="deep_blue">#003366</color>
     <color name="black_overlay">#66000000</color>
+    <color name="teal_600">#049594</color>
     <color name="bordercolor">#000000</color>
     <color name="red">#fc0303</color>
     <color name="orange">#fc8803</color>
